--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,17 @@
-web:
-  image: nginx:latest
-  ports:
-    - "8080:80"
-  volumes:
-    - ./code:/code
-    - ./site.conf:/etc/nginx/conf.d/site.conf
-  links:
-    - php
-php:
-  image: php:7-fpm
-  volumes:
-    - ./code:/code
+version: "3.7"
+services:
+  web:
+    image: nginx:latest
+    ports:
+      - "8080:80"
+    volumes:
+      - ./code:/code
+      - ./site.conf:/etc/nginx/conf.d/site.conf
+    links:
+      - php
+  php:
+    image: php:7-fpm
+    volumes:
+      - ./code:/code
 
 
